--- a/contents/events/event-template-folder/index.mdx
+++ b/contents/events/event-template-folder/index.mdx
@@ -1,11 +1,11 @@
 ---
 #start of metadata for the event
-title: Sample Event Capture Template
+title: An example of social event
 #if title has a colon in it, you have to "Put it: In Double Quotes". If it also includes a quote, "You Can:'nest them'"
 slug: abbreviated title
 #'slugs' are what goes into the url
 type: event
-date: 2019-04-20
+date: 2021-04-20
 #date the event took place
 categories:
   - events
